# beanie-mcp

./: .gitignore  LICENSE  README.md  ledger.py  pyproject.toml  server.py  server_test.py
docs/superpowers/plans/: 2026-06-25-beanquery-mcp-improvements.md
src/beanie_mcp/: __init__.py  ledger.py  server.py
