[project]
name = "beanie-mcp"
version = "0.1.0"
description = "MCP server for querying Beancount v3 ledgers in plain English"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beancount>=3.1.0",
    "beanquery>=0.2.0",
    "mcp[cli]>=1.5.0",
    "pydantic-settings>=2.0.0",
    "watchdog>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.8.5",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
xfail_strict = true
